[project]
name = "ipwhois"
description = "Retrieve and parse whois data for IPv4 and IPv6 addresses."

authors = [
    {name = "Philip Hane", email = "secynic@gmail.com"},
    {name = "Austin Traver", email = "austintraver@gmail.com"},
]
maintainers = [
    {name = "Austin Traver", email = "austintraver@gmail.com"},
]
version = "1.3.1"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10,<3.12"
dependencies = [
    "dnspython ~= 2.3.0",
]
[project.optional-dependencies]
dev = []

[project.urls]
homepage = "https://github.com/austintraver/ipwhois"
repository = "https://github.com/austintraver/ipwhois"
#documentation = "https://github.com/austintraver/ipwhois/tree/main/docs"
#changelog = "https://github.com/austintraver/ipwhois/releases"

# Reference:https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ipwhois = ["data/*.xml", "data/*.csv"]
